# ho_gui

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT_PHASES.md  PROJECT_ARCHITECTURE.md
docs/: COLOR_MODULE.md  GIT_WORKFLOW.md  MATH_MODULE.md  README.md  STYLE_MODULE.md
docs/tasks/: TASK_1_2_1.md  TASK_1_2_2.md  TASK_1_2_3.md
src/: app.rs  color.rs  lib.rs  math.rs  style.rs
